# Eklavya_Gantry

Firmware/DRV8825/: CMakeLists.txt
Firmware/DRV8825/include/: combined.h  drv8825.h  limit.h
Firmware/DRV8825/limit_lib/: CMakeLists.txt
Firmware/DRV8825/limit_lib/main/: CMakeLists.txt  limit_lib.c
Firmware/DRV8825/src/: combined.c  drv8825.c  limit.c
Firmware/DRV8825/total_positioning/main/: CMakeLists.txt  test.c
Firmware/I2C_Interface/: CMakeLists.txt
Firmware/I2C_Interface/main/: CMakeLists.txt  I2C_Interface.c
Firmware/Screwdriver/Screw/main/: Screw.c
Firmware/TMC2208/uart_microstepping/: CMakeLists.txt
Firmware/TMC2208/uart_microstepping/main/: uart_test.c
Firmware/TMC2208/uart_test/main/: uart_test.c
PCB/Gantry_PCBv2/: Gantry_PCBv2.kicad_pcb  Gantry_PCBv2.kicad_prl  Gantry_PCBv2.kicad_pro  Gantry_PCBv2.kicad_sch  _autosave-Gantry_PCBv2.kicad_sch  fp-info-cache  ~Gantry_PCBv2.kicad_pcb.lck
PCB/Gantry_PCBv2/gerbers/: Gantry_PCBv2-B_Cu.gbr  Gantry_PCBv2-B_Mask.gbr  Gantry_PCBv2-B_Paste.gbr  Gantry_PCBv2-B_Silkscreen.gbr  Gantry_PCBv2-Edge_Cuts.gbr  Gantry_PCBv2-F_Cu.gbr  Gantry_PCBv2-F_Mask.gbr  Gantry_PCBv2-F_Paste.gbr  Gantry_PCBv2-F_Silkscreen.gbr  Gantry_PCBv2-NPTH.drl  Gantry_PCBv2-PTH.drl  Gantry_PCBv2-job.gbrjob
